# gedit-gsp-plugin

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
data/: Makefile  Makefile.am  Makefile.in
debian/: changelog  control.in  copyright  rules
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in
src/: Makefile  Makefile.am  Makefile.in  chcompletionutils.c  chcompletionutils.h  gsc-snippets-provider.c  gsc-snippets-provider.h  gsp-plugin.c  gsp-plugin.h  gsp-provider-snippets.c  gsp-provider-snippets.h  gsp.gedit-plugin.desktop.in  snippet-proposal.c  snippet-proposal.h  snippetscompletion-plugin.c  snippetscompletion-plugin.c~  snippetscompletion-plugin.h  snippetscompletion.gedit-plugin.desktop.in
src/.deps/: gsc-snippets-provider.Plo  snippet-proposal.Plo  snippetscompletion-plugin.Plo
